--- a/Index.html
+++ b/Index.html
@@ -8,15 +8,42 @@
 </head>
 
 <body>
-    <div class="fundo-opaco">
-        <div class="header-inv">
-            <img class="logo" src="img/Galaxias.png" alt="Logo">
-            <div class="letras">
-                <div class="inkut">Galáxias</div>
-                <div class="inkut">Tipos de galáxias</div>
-                <div class="inkut">Principais Galáxias</div>
+    <div class="galaxias-fundo">
+        <div class="fundo-opaco">
+            <div class="header-inv">
+                <img class="logo" src="img/Galaxias.png" alt="Logo">
+                <div class="letras">
+                    <div class="inkut">Galáxias</div>
+                    <div class="inkut">Tipos de galáxias</div>
+                    <div class="inkut">Principais Galáxias</div>
+                </div>
             </div>
         </div>
+
+        <div class="header-inv2">
+            <div class="fundo-opaco2">
+                <h1 class="inkut">Galáxias</h1>
+                <p class="font_inter">Galáxias são sistemas ou conjuntos compostos por estrelas, gases, poeira e matéria
+                    escura.
+
+                    A maioria das grandes galáxias possui buracos negros no seu centro.
+
+                    Elas são definidas de acordo com a sua forma, podendo ser espirais, elípticas ou irregulares.
+
+                    Entre as principais galáxias, temos a Via Láctea, na qual vivemos, Andrômeda, Galáxia do Triângulo e
+                    Nuvem de Magalhães.
+
+                    As galáxias evoluem com o passar do tempo, podendo interagir e até mesmo se fundirem."
+                </p>
+            </div>
+                <div class="galaxia_azul"></div>
+
+
+
+
+
+        </div>
+
 
 
     </div>
